# memilio

./: .clang-format  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  Gruntfile.js  MyFile.txt  README.md  automatic.py  codecov.yml  compare_ide_ode.py  data_01.csv  data_04.csv  detailed_init_exponential_s_groundtruth.cpp  epi.py  epi_main.py  fitting.py  index.html  index.js  integrators.py  links.txt  package-lock.json  package.json  package.json.old  plot_times_bars.py  pyproject.toml  run.sh  style.css
cpp/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  README.md  Readme.md  abm_minimal.txt  bench.cpp  bench.h  bench_step.cpp  conanfile.py  conanfile.txt  euler.h  euler_test.c  sbatch.sh  seir.c  vcpkg.json
cpp/benchmarks/: CMakeLists.txt  abm.cpp  abmXcuda.cpp  bench_config_dir.h.in  bench_core.h  bench_model.h  bench_simulation.cpp  bench_step.cpp  benchmark_results.py  covasim_benchmark.py  filter-main  flow_simulation.cpp  flow_simulation.h  flow_simulation_ode_secirvvs.cpp  flow_simulation_ode_secirvvs.h  flow_simulation_ode_seir.cpp  flow_simulation_seir.cpp  graph_sim.config  graph_simulation.config  graph_simulation.cpp  graph_simulation.h  graph_simulation_benchmark.cpp  integrator_secir_sim.cpp  integrator_secir_sim.h  integrator_step.config  integrator_step.cpp  integrator_step.h  integrator_step_benchmark.config  ode_secirts_benchmark_stage_aligned.cpp  ode_seir_benchmark.cpp  ode_seir_benchmark_gpu.cpp  ode_seir_benchmark_gpu_kernels.cu  ode_seir_benchmark_w_sim.cpp  profiling.md  scorep-filter-abm  scorep_measuring.md  secir_ageres_setups.h  secirvvs_advance.cpp  simulation.config  simulation.cpp  (+2 more)
cpp/cmake/: BuildBoost.cmake  CodeCoverage.cmake  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake  FindSphinx.cmake  conan.cmake  epidemiology-config.cmake.in  memilio-conan.cmake  memilio-config.cmake.in  version.h.in
cpp/data_transfer/: CMakeLists.txt  create_LHA_scenario_from_ESID.py  create_optimal_control_scenario_from_ESID.py  create_scenario_from_ESID.py  generate_extrapolated.cpp  generate_graph_and_scenario.cpp  generate_graph_from_data.cpp  lha_data_initialization.cpp  post_parameters.py  post_requests.py  post_scenarios_to_db.py  put_data_in_api.py  save_parameters_json.py  simulate_lha_scenario.cpp  simulate_lha_scenario_cologne.cpp  simulate_optimal_control_model.h  simulate_optimal_control_scenario.cpp  simulate_scenario.cpp
cpp/epidemiology/: adapt_rk.cpp  adapt_rk.h  common.cpp  common.h  compartmental_model.cpp  compartmental_model.h  damping.cpp  damping.h  eigen_util.h  euler.cpp  euler.h  graph.cpp  graph.h  integrator.cpp  integrator.h  logging.h  memory.h  migration.cpp  migration.h  populations.cpp  populations.h  save_parameters.cpp  save_parameters.h  save_result.cpp  save_result.h  secir.cpp  secir.h  seir.cpp  seir.h  seirParam.h  seir_param.cpp  seir_param.h  span.cpp  stl_util.h  tensor_helpers.cpp  tensor_helpers.h  time_series.cpp  time_series.h  uncertain_matrix.cpp  uncertain_matrix.h  (+3 more)
cpp/epidemiology_io/: hdf5_cpp.h  io.cpp  io.h  json_serializer.cpp  json_serializer.h  mobility_io.cpp  mobility_io.h  read_twitter.cpp  read_twitter.h  secir_parameters_io.cpp  secir_parameters_io.h  secir_result_io.cpp  secir_result_io.h  twitter_migration_io.cpp  twitter_migration_io.h
cpp/examples/: CMakeLists.txt  IDE.cpp  abm.cpp  abm_benchmark_scaling.cpp  abm_from_statistical_data.cpp  abm_history_object.cpp  abm_ide_lct_ode.cpp  abm_minimal.cpp  abm_minimal.cu  abm_minimal_caller.cpp  abm_output_object.cpp  abm_parameter_study.cpp  ad_abm_minimal.cpp  ad_odeint_example.cpp  ad_square_example.cpp  adapt_rk_test.cpp  analyze_bs_run.py  asym_ex_data.cpp  asym_graph_ben.cpp  asymmetric_graph.cpp  asymmetric_params.cpp  basic_reproduction_numbers.cpp  cli.cpp  compute_parameters.cpp  county_simulation.cpp  d_abm.cpp  data_dir.h.in  euler_test.cpp  forward_pass.cpp  forward_pass.h  glct_initial_values.cpp  glct_secir.cpp  glct_secir_fictional_scenario.cpp  gpu_integrator.cpp  gpu_integrator.cu  gpu_integrator.h  graph.cpp  graph_abm.cpp  graph_abm_data_generation.cpp  graph_extended.cpp  (+168 more)
cpp/memilio/: CMakeLists.txt  README.md  config.h  config_internal.h.in
cpp/models/: CMakeLists.txt  README.md
cpp/munich_postprocessing/: CMakeLists.txt  output_processing.cpp  output_processing.h
cpp/munich_preprocessing/: output_processing.cpp
cpp/sbml_model_generation/: CMakeLists.txt  sbml_to_memilio.cpp
cpp/scripts/: Asymptomatic.txt  Dead.txt  Exposed.txt  Infected.txt  Quarantined.txt  Recovered.txt  SocialDistancing.txt  Susceptible.txt  TestingRate.txt  compile.sh  plot_seair.py  plot_secirvvs.py  run.sh  run_optimal_control_dynamic_NPIs.sh  sbatch.sh
cpp/sims/: CMakeLists.txt  README.md  paper1.cpp  paper_202011.cpp  paper_202107.cpp  paper_202107_one_region.cpp
cpp/simulations/: 2020_npis_sarscov2_wildtype_germany.cpp  2020_npis_wildtype.cpp  2021_vaccination_delta.cpp  2021_vaccination_sarscov2_delta_germany.cpp  2022_amelag.cpp  2022_oktober_festival.cpp  2022_omicron_late_phase_mobility.cpp  2022_omicron_late_phase_mobility_ts.cpp  2022_omicron_late_phase_mobility_vvs.cpp  2023_fall_data.cpp  2034_stress_test_week_1.cpp  2034_stress_test_week_2.cpp  2034_stress_test_week_3.cpp  Amelag_single.cpp  CMakeLists.txt  README.md  abm.cpp  abm_INSIDe_demonstrator.cpp  abm_braunschweig.cpp  amelag_single_vvs.cpp  analyze_bs_run.py  analyze_npi.py  analyze_npi_bundesland.py  autumn_simulation.cpp  averagemse  check_bs_data.py  check_formatted_bs_data.py  cleanup_data.py  compare_mobility_data.py  data_generation.sh  find_best_rmse.py  generate_graph_from_data.cpp  ide_changepoints.cpp  mov_data_analysis.py  (+11 more)
frontend/: .env.development  .env.production  .prettierrc  CMakeLists.txt  README.md  package-lock.json  package.json
pycode/: CMakeLists.txt  README.rst  Readme.rst  abm_playground.ipynb  gui.py  multiply.py  pylintrc  requirements-dev.txt  run_pylint.py  setup.py  setup_venv.sh  sirs_test.ipynb  test1.py  test2.py  test_notrbook.ipynb
(+6247 files in other folders)
