[tool.autopep8]
max-line-length = 79

[tool.pyright]
include = ["pycode"]
exclude = ["pycode/memilio-simulation"]

[build-system]
requires = [
  "scikit-build-core>=0.9.0",
  "setuptools>=68",
  "wheel",
  "pybind11>=2.11.2"
]
build-backend = "scikit_build_core.build"

[project]
name = "memilio-simulation"
version = "1.0.0"
description = "Part of MEmilio project, python bindings to the C++ libraries that contain the models and simulations."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "MEmilio Team" }]
maintainers = [
  { email = "martin.kuehn@dlr.de" }
]
dependencies = [
  # smaller numpy versions cause a security issue, 1.25 does not work together with pyfakefs
  "numpy>=1.22,!=1.25.*",
  # smaller pandas versions contain a bug that sometimes prevents reading
  "pandas>=2.0.0"
]

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/SciCompMod/memilio"
Team = "https://memilio.readthedocs.io/en/latest/team.html"

[tool.scikit-build]
cmake.version = ">=3.13"
cmake.args = ["-DMEMILIO_BUILD_SHARED_LIBS:BOOL=ON"]
wheel.packages = ["memilio"]
wheel.install-dir = "memilio/simulation"
build-dir = "../build/memilio-simulation"

[tool.setuptools]
packages = ["pycode/memilio-simulation"]
