[project]
# Note that this file is only installing the memilio-simulation package. For installing the other Python packages, 
# please go to the respective folder pycode/memilio-* and install from there. 
name = "memilio-simulation"
# dynamic = ["version"] 
# remove following line before merge: 
version = "2.3.0"
description = "Part of MEmilio project, Python bindings to the C++ libraries that contain the models and simulations."
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0" 
authors = [{ name = "MEmilio Team" }]
maintainers = [
  { email = "martin.kuehn@dlr.de" }
]
dependencies = [
  # smaller numpy versions cause a security issue, 1.25 does not work together with pyfakefs
  "numpy>=1.22,!=1.25.*",
  # smaller pandas versions contain a bug that sometimes prevents reading
  "pandas>=2.0.0"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows"
]

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/SciCompMod/memilio"
Team = "https://memilio.readthedocs.io/en/latest/team.html"

[build-system]
requires = [
  "scikit-build-core>=0.9.0",
  "setuptools>=68",
  "setuptools-scm>=8",
  "wheel"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.13"
cmake.args = ["-DMEMILIO_BUILD_SHARED_LIBS:BOOL=ON"]
wheel.packages = ["pycode/memilio-simulation/memilio"]
wheel.install-dir = "memilio/simulation"
build-dir = "pycode/build/memilio-simulation"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]  
local_scheme = "no-local-version"

[tool.cibuildwheel]
# Disable some wheels
skip = ["pp*", "*musllinux*", "*-win32", "cp314*"] 

[tool.autopep8]
max-line-length = 79

[tool.pyright]
include = ["pycode"]
exclude = ["pycode/memilio-simulation"]